Bug 630218 - Reflect.parse("x.*") shouldn't mark the MemberExpression as computed. r=dherman.

--HG--
extra : rebase_source : 0bb714d5f76734fa88fdcd3c24718a13cc01f735